# c_dynamic_string

./: .gitignore  CMakeLists.txt  README.md  dynamic_strings.c  dynamic_strings.h  main.c  test.c
include/: dynamic_strings.h  test_dynamic_strings.h
src/: dynamic_strings.c
